--- a/app/index.html
+++ b/app/index.html
@@ -217,6 +217,7 @@
         <script src="js/importService.js"></script>
         <script src="js/linksPopupService.js"></script>
         <script src="js/parameterService.js"></script>
+        <script src="js/themeService.js"></script>
         <script src="js/translationService.js"></script>
         <script src="js/neonDemoController.js"></script>
 
