Modifying some CSS that was causing issues during the initial sizing of a dashboard.  The way 'visualization-mobile' was applied to visualizations was through an angular digest cycle that allowed mobile and full screen styles to mix.  This broke various bits of resizing code when resizing a browser or having a dashboard that connects on load.  These changes should limit, though may not full prevent these errors conditions.  Some of the issues depend on the speed of the browser rendering and the complexity of the visualizations.

--- a/app/index.html
+++ b/app/index.html
@@ -135,10 +135,9 @@
             <div gridster="gridsterOpts" id="gridster-div">
                 <ul>
                     <li gridster-item="visualization" ng-repeat="visualization in visualizations track by visualization.id">
-                        <div class="well" visualization-widget
+                        <div class="well visualization-widget" visualization-widget
                             gridster-configs="visualizations"
-                            gridster-config-index="$index"
-                            ng-class="(isInMobileMode())? 'visualization-widget-mobile' : 'visualization-widget'"></div>
+                            gridster-config-index="$index"></div>
                     </li>
                 </ul>
             </div>
