Changed showFilterStatusTray configuration option to hideFilterStatusTray because the filter tray should be enabled by default.

--- a/app/index.html
+++ b/app/index.html
@@ -114,7 +114,7 @@
                     <div add-visualization gridster-configs="visualizations" ng-show="!hideNavbarItems && !hideAddVisualizationsButton"></div>
 
                     <!-- FILTER STATUS TRAY -->
-                    <div filter-tray bound-parent="'nav.navbar'" include-parent-height="!hideNavbarItems" ng-show="showFilterStatusTray" class="pull-right"></div>
+                    <div filter-tray bound-parent="'nav.navbar'" include-parent-height="!hideNavbarItems" ng-show="!hideFilterStatusTray" class="pull-right"></div>
                 </div>
             </div>
         </nav>
