Make wizard more re-usable. Change layout of database and relations steps in wizard.

--- a/app/index.html
+++ b/app/index.html
@@ -273,5 +273,11 @@
         <script src="js/directives/arrayTextForm.js"></script>
         <script src="js/directives/translationOptions.js"></script>
         <script src="js/directives/savedStates.js"></script>
+        <script src="js/dataset-wizard/wizardTemplate.js"></script>
+        <script src="js/dataset-wizard/datastoreStep.js"></script>
+        <script src="js/dataset-wizard/databaseStep.js"></script>
+        <script src="js/dataset-wizard/fieldsStep.js"></script>
+        <script src="js/dataset-wizard/relationsStep.js"></script>
+        <script src="js/dataset-wizard/layoutStep.js"></script>
     </body>
 </html>
