Fix options menu from closing when trying to select a different theme.

--- a/app/index.html
+++ b/app/index.html
@@ -113,7 +113,7 @@
                                 <a href="#" class="unselectable">Theme:</a>
                             </li>
                             <li>
-                                <select class="form-control navbar-indented" ng-options="item.name for item in theme.list" ng-model="theme.selected" ng-change="updateTheme()"></select>
+                                <select class="select-theme form-control navbar-indented" ng-options="item.name for item in theme.list" ng-model="theme.selected" ng-change="updateTheme()"></select>
                             </li>
                             <li class="divider"></li>
                             <li>
