NEON-1920 Initial work to transition to the use of abstract visualization superclasses.  Created the Single Table Visualization directive and changed the Visualization Widget and Aggregation Table to work with it.

--- a/client/index.html
+++ b/client/index.html
@@ -239,7 +239,7 @@
         <script src="app/visualization.service.js"></script>
         <script src="app/main/main.controller.js"></script>
         <script src="components/addVisualization/addVisualization.directive.js"></script>
-        <script src="components/aggregationTable/aggregationTable.directive.js"></script>
+        <script src="components/aggregationTable/aggregationTable.controller.js"></script>
         <script src="components/barChart/barChart.directive.js"></script>
         <script src="components/barChart/barChart.js"></script>
         <script src="components/dataTable/dataTable.directive.js"></script>
@@ -281,6 +281,7 @@
         <script src="components/sample/sample.directive.js"></script>
         <script src="components/savedStates/savedStates.directive.js"></script>
         <script src="components/scatterPlot/scatterPlot.directive.js"></script>
+        <script src="components/singleTableVisualization/singleTableVisualization.directive.js"></script>
         <script src="components/sunburstChart/sunburst.js"></script>
         <script src="components/sunburstChart/sunburstChart.directive.js"></script>
         <script src="components/textCloud/textCloud.directive.js"></script>
@@ -291,6 +292,7 @@
         <script src="components/timeline/timelineSelectorChart.js"></script>
         <script src="components/timeline/yearBucketizer.js"></script>
         <script src="components/translationOptions/translationOptions.directive.js"></script>
+        <script src="components/visualization/visualization.directive.js"></script>
         <script src="components/visualizationWidget/visualizationWidget.directive.js"></script>
         <!-- endinjector -->
         <!-- endbuild -->
