NEON-1920 Amending parts of the previous commit:  the single-table-visualization still contains the filter-container but the filter-reset element has moved to the new filter-notification directive.  Changed visualization-heading back to visualization-headers.  The visualization-headers directive now contains all headers and the filter-notification.

--- a/client/index.html
+++ b/client/index.html
@@ -254,6 +254,7 @@
         <script src="components/export/fileFormats.directive.js"></script>
         <script src="components/filterBuilder/filterBuilder.directive.js"></script>
         <script src="components/filterBuilder/filterTable.js"></script>
+        <script src="components/filterNotification/filterNotification.directive.js"></script>
         <script src="components/filterTray/filterTray.directive.js"></script>
         <script src="components/ganttChart/ganttChart.directive.js"></script>
         <script src="components/import/import.directive.js"></script>
