NEON-1920 The Text Cloud now uses the Single Table Visualization superclass.  Changed the filter in the Single Table Visualization to default to a list instead of a single value.  Added support to the Single Table Visualization for adding and removing single filters in addition to replacing or removing all the filters.  Work in progress.

--- a/client/index.html
+++ b/client/index.html
@@ -285,7 +285,7 @@
         <script src="components/singleTableVisualization/singleTableVisualization.directive.js"></script>
         <script src="components/sunburstChart/sunburst.js"></script>
         <script src="components/sunburstChart/sunburstChart.directive.js"></script>
-        <script src="components/textCloud/textCloud.directive.js"></script>
+        <script src="components/textCloud/textCloud.controller.js"></script>
         <script src="components/timeline/dateBucketizer.js"></script>
         <script src="components/timeline/monthBucketizer.js"></script>
         <script src="components/timeline/timeline.directive.js"></script>
