NEON-1920 The Timeline now uses the Single Table Visualization superclass.  Combined the two Timeline directives into a single controller.  Replaced use of watches in the Timeline with ng-change and ng-click.

--- a/client/index.html
+++ b/client/index.html
@@ -288,8 +288,7 @@
         <script src="components/textCloud/textCloud.controller.js"></script>
         <script src="components/timeline/dateBucketizer.js"></script>
         <script src="components/timeline/monthBucketizer.js"></script>
-        <script src="components/timeline/timeline.directive.js"></script>
-        <script src="components/timeline/timelineChart.directive.js"></script>
+        <script src="components/timeline/timeline.controller.js"></script>
         <script src="components/timeline/timelineSelectorChart.js"></script>
         <script src="components/timeline/yearBucketizer.js"></script>
         <script src="components/translationOptions/translationOptions.directive.js"></script>
