NEON-1920 The News Feed is now created through the Single Table Visualization superclass.  Also improved how translation is run in the superclass.

--- a/client/index.html
+++ b/client/index.html
@@ -273,7 +273,7 @@
         <script src="components/networkGraph/directedGraph.js"></script>
         <script src="components/networkGraph/directedGraphMediator.js"></script>
         <script src="components/networkGraph/networkGraph.directive.js"></script>
-        <script src="components/newsFeed/newsFeed.directive.js"></script>
+        <script src="components/newsFeed/newsFeed.controller.js"></script>
         <script src="components/opsClock/circularHeatChart.js"></script>
         <script src="components/opsClock/opsClock.directive.js"></script>
         <script src="components/opsClock/opsClockChart.directive.js"></script>
