NEON-1920 The Data Table is now created through the Single Table Visualization superclass.

--- a/client/index.html
+++ b/client/index.html
@@ -242,7 +242,7 @@
         <script src="components/aggregationTable/aggregationTable.controller.js"></script>
         <script src="components/barChart/barChart.directive.js"></script>
         <script src="components/barChart/barChart.js"></script>
-        <script src="components/dataTable/dataTable.directive.js"></script>
+        <script src="components/dataTable/dataTable.controller.js"></script>
         <script src="components/databaseConfig/databaseConfig.directive.js"></script>
         <script src="components/datasetWizard/databaseStep.directive.js"></script>
         <script src="components/datasetWizard/datastoreStep.directive.js"></script>
