--- a/client/index.html
+++ b/client/index.html
@@ -275,8 +275,7 @@
         <script src="components/networkGraph/networkGraph.directive.js"></script>
         <script src="components/newsFeed/newsFeed.controller.js"></script>
         <script src="components/opsClock/circularHeatChart.js"></script>
-        <script src="components/opsClock/opsClock.directive.js"></script>
-        <script src="components/opsClock/opsClockChart.directive.js"></script>
+        <script src="components/opsClock/opsClock.controller.js"></script>
         <script src="components/optionsMenu/optionsMenu.directive.js"></script>
         <script src="components/poweredByNeon/poweredByNeon.directive.js"></script>
         <script src="components/sample/sample.directive.js"></script>
