NEON-1920 The Sunburst Chart is now created through the Single Table Visualization superclass.  Also renamed a few functions in the Single Table Visualization to make them less specific.

--- a/client/index.html
+++ b/client/index.html
@@ -283,7 +283,7 @@
         <script src="components/scatterPlot/scatterPlot.directive.js"></script>
         <script src="components/singleTableVisualization/singleTableVisualization.directive.js"></script>
         <script src="components/sunburstChart/sunburst.js"></script>
-        <script src="components/sunburstChart/sunburstChart.directive.js"></script>
+        <script src="components/sunburstChart/sunburstChart.controller.js"></script>
         <script src="components/textCloud/textCloud.controller.js"></script>
         <script src="components/timeline/dateBucketizer.js"></script>
         <script src="components/timeline/monthBucketizer.js"></script>
