NEON-1920 The Scatter Plot (formerly the Plotly Graph) is now created through the Single Table Visualization superclass.

--- a/client/index.html
+++ b/client/index.html
@@ -280,7 +280,7 @@
         <script src="components/poweredByNeon/poweredByNeon.directive.js"></script>
         <script src="components/sample/sample.directive.js"></script>
         <script src="components/savedStates/savedStates.directive.js"></script>
-        <script src="components/scatterPlot/scatterPlot.directive.js"></script>
+        <script src="components/scatterPlot/scatterPlot.controller.js"></script>
         <script src="components/singleTableVisualization/singleTableVisualization.directive.js"></script>
         <script src="components/sunburstChart/sunburst.js"></script>
         <script src="components/sunburstChart/sunburstChart.controller.js"></script>
