NEON-1920 The Network Graph visualization can now be created through the Single Table Visualization superclass.  Also fixed a minor bug in the directed graph mediator.

--- a/client/index.html
+++ b/client/index.html
@@ -272,7 +272,7 @@
         <script src="components/map/selectedPointsLayer.js"></script>
         <script src="components/networkGraph/directedGraph.js"></script>
         <script src="components/networkGraph/directedGraphMediator.js"></script>
-        <script src="components/networkGraph/networkGraph.directive.js"></script>
+        <script src="components/networkGraph/networkGraph.controller.js"></script>
         <script src="components/newsFeed/newsFeed.controller.js"></script>
         <script src="components/opsClock/circularHeatChart.js"></script>
         <script src="components/opsClock/opsClock.controller.js"></script>
