NEON-1920 The Bar Chart now depends on the Single Table Visualization superclass.

--- a/client/index.html
+++ b/client/index.html
@@ -240,7 +240,7 @@
         <script src="app/main/main.controller.js"></script>
         <script src="components/addVisualization/addVisualization.directive.js"></script>
         <script src="components/aggregationTable/aggregationTable.controller.js"></script>
-        <script src="components/barChart/barChart.directive.js"></script>
+        <script src="components/barChart/barChart.controller.js"></script>
         <script src="components/barChart/barChart.js"></script>
         <script src="components/dataTable/dataTable.controller.js"></script>
         <script src="components/databaseConfig/databaseConfig.directive.js"></script>
