--- a/client/index.html
+++ b/client/index.html
@@ -256,7 +256,7 @@
         <script src="components/filterBuilder/filterTable.js"></script>
         <script src="components/filterNotification/filterNotification.directive.js"></script>
         <script src="components/filterTray/filterTray.directive.js"></script>
-        <script src="components/ganttChart/ganttChart.directive.js"></script>
+        <script src="components/ganttChart/ganttChart.controller.js"></script>
         <script src="components/import/import.directive.js"></script>
         <script src="components/import/removeDataset.directive.js"></script>
         <script src="components/lineChart/lineChart.directive.js"></script>
